# x402-oracle

./: .firebaserc  .gitignore  README.md  firebase.json
.firebase/: hosting.eDQwMi1vcmFjbGUtbGFuZGluZ1xidWlsZA.cache
a2a-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
a2a-service/host/: executor.py  main.py  pipeline.py  service.py
a2a-service/host/lib/: config.py
a2a-service/host/lib/a2a/: discovery.py  events.py
a2a-service/host/lib/core/: base_agent.py  base_pipeline.py
a2a-service/host/lib/enums/: common.py  message.py  name.py
a2a-service/host/lib/errors/: app_error.py  decorators.py
a2a-service/host/lib/openai/: client.py  planner.py
batch-poster/: README.md  package.json  tsconfig.json
resource-service/: .env.example  README.md  package-lock.json  package.json
seda-cronos/: Cargo.toml
seda-cronos/examples/caplight-eod-market-price/: README.md
seda-cronos/examples/caplight-eod-market-price/src/: execution_phase.rs  tally_phase.rs
seda-cronos/examples/evm-price-feed/: README.md
seda-cronos/examples/evm-price-feed/src/: execution_phase.rs
seda-cronos/examples/generic-dxfeed/: README.md
seda-cronos/examples/generic-dxfeed/src/: execution_phase.rs
seda-cronos/examples/multi-price-feed/: README.md
seda-cronos/examples/multi-price-feed/src/: execution_phase.rs  tally_phase.rs
seda-cronos/examples/single-commodity-price/: README.md
seda-cronos/examples/single-commodity-price/src/: execution_phase.rs  tally_phase.rs
seda-cronos/examples/single-equity-price-verification/: README.md
seda-cronos/examples/single-equity-price-verification/src/: execution_phase.rs  main.rs
seda-cronos/examples/single-price-feed-verification/: README.md
seda-cronos/examples/single-price-feed-verification/src/: execution_phase.rs
seda-cronos/examples/tests/: caplight-eod-market-price.test.ts  evm-price-feed.test.ts  generic-dxfeed.test.ts  multi-price-feed.test.ts  single-commodity-price.test.ts  single-equity-price-verification.test.ts  single-price-feed-verification.test.ts  utils.ts
seda-cronos/xtask/src/: main.rs
(+74 files in other folders)
