[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_paywall_service"
version = "0.1.0"
description = "A2A-based paywall agent for discovering and accessing X402-protected resources using A2A LLM-driven planning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Ricardo Arcifa", email = "ricardo.arcifa@crypto.com" }
]

keywords = [
  "a2a",
  "agents",
  "paywall",
  "x402",
  "payments",
  "llm",
  "openai",
  "microservices",
  "cronos",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Security :: Cryptography",
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",

  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",

  "pydantic>=2.7.1",
  "jinja2>=3.1.3",

  "openai>=1.0",

  "a2a-sdk>=0.3.0",
  "google-adk>=1.7.0",
  "mcp>=1.5.0",

  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.30.0",
  "greenlet>=3.0.3",

  "web3>=6.15.1",
  "eth-account>=0.10.0",

  "rich>=13.7.0",
  "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
]
