[workspace]
resolver = "2"
default-members = ["xtask"]
members = [
	"examples/caplight-eod-market-price",
	"examples/evm-price-feed",
	"examples/generic-dxfeed",
	"examples/multi-price-feed",
	"examples/single-commodity-price",
	"examples/single-equity-price-verification",
	"examples/single-price-feed-verification",
	"xtask",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
